# parquet-viewer-rs

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
